--- a/My Portfolio/index.html
+++ b/My Portfolio/index.html
@@ -90,7 +90,7 @@
                 ></a>
               </div>
               <div class="icon">
-                <a href="" target="_self"><i class="uil uil-dribbble"></i></a>
+                <a href="" target="_self"><i class="uil uil-twitter"></i></a>
               </div>
               <div class="icon">
                 <a href="https://github.com/TINKUKUMARGitHub" target="_blank"
